--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>Flip Coin Cat</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
