--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 style="color: red">Flip Coin Cat</h1>
-    <img src="https://turquoise-smiling-halibut-906.mypinata.cloud/ipfs/QmNtf5zbi6CuhVaGZcUf5NUTw8TXZKtU2nh5duxGhYigHM" width="50%" height="50%"></img>
+    <img src="https://turquoise-smiling-halibut-906.mypinata.cloud/ipfs/QmNtf5zbi6CuhVaGZcUf5NUTw8TXZKtU2nh5duxGhYigHM" width="100%%" height="100%"></img>
     <div>
       <button>Head</button>
       <button>Tail</button>
