--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,15 +2,24 @@
 <html>
   <head>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
     <title>Flip Coin Cat</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1 style="color: red">Flip Coin Cat</h1>
     <img src="https://turquoise-smiling-halibut-906.mypinata.cloud/ipfs/QmNtf5zbi6CuhVaGZcUf5NUTw8TXZKtU2nh5duxGhYigHM" width="100%%" height="100%"></img>
+    <div id="ton-connect"></div>
     <div>
       <button>Head</button>
       <button>Tail</button>
     </div>
+
+    <script>
+      const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
+          manifestUrl: 'https://ton-flip-coin.vercel.app/tonconnect-manifest.json',
+          buttonRootId: 'ton-connect'
+      });
+    </script>
   </body>
 </html>
