--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,8 @@
     width="100%%" height="100%"></img>
   <div id="ton-connect"></div>
   <div>
-    <button>Head</button>
-    <button>Tail</button>
+    <button><h1>Head</h1></button>
+    <button><h1>Tail</h1></button>
   </div>
 
   <script>
